# portable-collections

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude-research-library/queues/: README.md  scoped-log-backends.md
.claude-research-library/trees/: README.md  bcachefs-improvement-analysis.md  fs-suitability-scores.md  non-bplus-fs-core-exploration.md
.claude-research-library/trees/archived_ordered-radix/: BENCH.md  Cargo.toml  README.md
.claude-research-library/trees/archived_ordered-radix/src/: art.rs  traits.rs
.claude-research-library/trees/archived_radix-fs-prototype/: Cargo.toml
.claude-research-library/trees/archived_radix-fs-prototype/src/: conc.rs  concurrent.rs  journal.rs  key.rs  sim.rs  trie.rs
.claude-research-library/trees/archived_radix-fs-prototype/tests/: correctness.rs  stack.rs
.claude-research-library/trees/ordered-radix/: BENCH.md  Cargo.toml  README.md
.claude-research-library/trees/ordered-radix/src/: art.rs  concurrent.rs  cow.rs  lib.rs
.claude-research-library/trees/ordered-radix/tests/: concurrent.rs
.claude-research-library/trees/prototype/: Cargo.toml  README.md
.claude-research-library/trees/prototype/src/: concurrent.rs  lib.rs  lockfree.rs  snapshot.rs  store.rs  waitfree.rs
.claude-research-library/trees/prototype/tests/: concurrent.rs  loom_waitfree.rs
portable-bijectives/: Cargo.toml
portable-bijectives/benches/: bimap_bench.rs  report.typ
portable-bijectives/benches/criterion-data/: insert_dense-BTreeBimap.json  insert_dense-FlatRadixBimap.json  lookup_dense-BTreeBimap.json  lookup_dense-FlatRadixBimap.json  scoped_rollback-BTreeBimap.json  scoped_rollback-FlatRadixBimap.json
portable-bijectives/src/: btree_bimap.rs  flat_radix_bimap.rs  lib.rs
portable-collection-primitives/: Cargo.toml
portable-collection-primitives/src/: lib.rs
portable-collection-primitives/src/hashkvs/: mod.rs
portable-collection-primitives/src/primitives/: bijection.rs  checkpointing.rs  container.rs  mod.rs  ordered.rs  queue.rs  scoped_log.rs
portable-collection-primitives/src/trees/: mod.rs
portable-maps-and-sets/: Cargo.toml  build.rs
portable-maps-and-sets/examples/: radix_bench.rs  radix_cbench.rs
portable-maps-and-sets/src/: lib.rs
portable-maps-and-sets/src/radix/: art.rs  concurrent.rs  concurrent_art.rs  cow.rs  mod.rs  traits.rs
portable-maps-and-sets/tests/: radix_concurrent.rs
portable-queues/: Cargo.toml
portable-queues/src/: array_scoped_stack.rs  deque_scoped_queue.rs  heapless_log.rs  lib.rs  vec_log.rs  vec_queue.rs  vec_scoped_stack.rs
