[workspace]
resolver = "2"
members = ["portable-bijectives", "portable-maps-and-sets", "portable-queues", "portable-collection-primitives"]

# Shared metadata for every `portable-collections` crate. New members inherit
# these with `field.workspace = true` in their own `[package]`.
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0 OR MIT"
repository = ""
authors = ["윤병익 <yeun0908@gmail.com, newsniper@protonmail.com>"]


# Every crate in this workspace is no_std-friendly by policy.
[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(toolchain_channel, values("stable", "beta", "nightly", "dev"))'] }


[workspace.dependencies]
portable-collection-primitives = { path = "./portable-collection-primitives/", default-features = false }
rustc_version = { version = "0.4" }
