[package]
name = "portable-bijectives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Portable, no_std bijective data structures."
keywords = ["bijection", "bimap", "no_std"]
categories = ["data-structures", "no-std"]

[features]
# no_std + alloc is the default. Enable `std` only to add `std::error::Error`
# impls for the error types (the data structures themselves never need std).
default = []
std = []

[dependencies]

[lints]
workspace = true
