[package]
name = "portable-bijectives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Portable, no_std bijective data structures."
keywords = ["bijection", "bimap", "no_std"]
categories = ["data-structures", "no-std"]

[features]
# no_std + alloc is the default. Enable `std` only to add `std::error::Error`
# impls for the error types (the data structures themselves never need std).
default = ["alloc"]
alloc = ["portable-collection-primitives/alloc"]
std = ["portable-collection-primitives/std"]
unstable = ["portable-collection-primitives/unstable"]

[dependencies]
portable-collection-primitives = { workspace = true, default-features = false }

[build-dependencies]
rustc_version.workspace = true

[lints]
workspace = true
