[package]
name = "portable-maps-and-sets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Portable, no_std map and set data structures."
keywords = ["set", "map", "no_std"]
categories = ["data-structures", "no-std"]

[features]
# no_std + alloc is the default. Enable `std` only to add `std::error::Error`
# impls for the error types (the data structures themselves never need std).
default = ["alloc"]
alloc = ["portable-collection-primitives/alloc"]
std = ["portable-collection-primitives/std"]
unstable = ["portable-collection-primitives/unstable"]
# Lock-free concurrent radix maps (`ConcurrentRadixMap` / `ConcurrentArt`): the
# CoW structure with an atomic-`Arc` root via `arc-swap` (wait-free reads,
# lock-free writes, `Arc`-refcount reclamation, still `unsafe`-free). Pulls
# `std` (threads + arc-swap) — the in-DRAM metadata-cache use case.
concurrent = ["std", "dep:arc-swap"]

[dependencies]
portable-collection-primitives = { workspace = true, default-features = false }
arc-swap = { workspace = true, optional = true }

[lints]
workspace = true

[[example]]
name = "radix_bench"
path = "examples/radix_bench.rs"

# Concurrent ART throughput micro-benchmark (needs the `concurrent` feature; the
# example compiles without it via a `cfg`-gated stub `main`).
[[example]]
name = "radix_cbench"
path = "examples/radix_cbench.rs"