[package]
name = "ordered-radix"
version = "0.1.0"
edition = "2024"
# Project-wide toolchain floor (channel-agnostic MSRV).
rust-version = "1.96"
publish = false
description = "no_std, unsafe-free ordered copy-on-write radix map with O(1) snapshots; optional lock-free concurrent variant. Extracted for filesystem-researches (in-DRAM metadata cache + on-disk backbone candidate)."

# Detached from the parent workspace (Claude-owned experiment / hand-off crate).
[workspace]

[features]
default = []
# The lock-free concurrent map (atomic-Arc root via arc-swap); implies std.
concurrent = ["dep:arc-swap"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "cbench"
path = "src/bin/cbench.rs"

[dependencies]
arc-swap = { version = "1", optional = true }

[dev-dependencies]
# (none — tests use only std test harness)
