[package]
name = "radix-fs-prototype"
version = "0.1.0"
edition = "2021"
publish = false
description = "Userspace prototype + simulator for the ordered-radix, journalled, snapshot-native, wait-free-write FS-core design (non-B+tree synthesis)."

# Detached from the parent `portable-collections` workspace on purpose:
# this is a Claude-owned experiment; the user owns the workspace Cargo.toml.
[workspace]

# The single dependency: arc-swap provides a lock-free atomic `Arc` swap with a
# safe API, so the real lock-free layer stays `unsafe`-free (reclamation is Arc
# refcounting). This is the "lean on a vetted crate" path the analysis endorsed.
[dependencies]
arc-swap = "1"

# loom is only pulled in for the model-checking build (RUSTFLAGS="--cfg loom").
# Normal `cargo test` never compiles it.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lib]
name = "radix_fs_prototype"
path = "src/lib.rs"

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[[bin]]
name = "stress"
path = "src/bin/stress.rs"

[[bin]]
name = "fsdemo"
path = "src/bin/fsdemo.rs"

[profile.release]
opt-level = 3

[lints.rust]
# `loom` is a known custom cfg used only by tests/loom_waitfree.rs.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
